--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -8,6 +8,10 @@ edition = "2018"
 
 [dependencies]
 [[bin]]
+name = "abc086a"
+path = "src/abc/086/a.rs"
+
+[[bin]]
 name = "abc099c"
 path = "src/abc/099/c.rs"
 
