--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -28,6 +28,10 @@ name = "abc087b"
 path = "src/abc/087/b.rs"
 
 [[bin]]
+name = "abc088b"
+path = "src/abc/088/b.rs"
+
+[[bin]]
 name = "abc099c"
 path = "src/abc/099/c.rs"
 
