add the code for arc 004a written in rust

--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -56,6 +56,10 @@ name = "abc099c"
 path = "src/abc/099/c.rs"
 
 [[bin]]
+name = "arc004a"
+path = "src/arc/004/a.rs"
+
+[[bin]]
 name = "edpca"
 path = "src/edpc/a.rs"
 
