add the code for abc 075b written in rust

--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -16,6 +16,10 @@ name = "abc051b"
 path = "src/abc/051/b.rs"
 
 [[bin]]
+name = "abc075b"
+path = "src/abc/075/b.rs"
+
+[[bin]]
 name = "abc081a"
 path = "src/abc/081/a.rs"
 
