--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -68,6 +68,10 @@ name = "abc087b"
 path = "src/abc/087/b.rs"
 
 [[bin]]
+name = "abc087c"
+path = "src/abc/087/c.rs"
+
+[[bin]]
 name = "abc088b"
 path = "src/abc/088/b.rs"
 
