--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -88,6 +88,10 @@ name = "abc099c"
 path = "src/abc/099/c.rs"
 
 [[bin]]
+name = "abc122c"
+path = "src/abc/122/c.rs"
+
+[[bin]]
 name = "arc004a"
 path = "src/arc/004/a.rs"
 
