--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -6,6 +6,10 @@ edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+
+[[bin]]
+name = "abc002d"
+path = "src/abc/002/d.rs"
 [dependencies]
 [[bin]]
 name = "abc049c"
